{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 17,
  "lineage": "62aec88e-aad5-2c69-72a6-1c3155791d2d",
  "resources": [
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375879531645:vpc/vpc-03e815eb9c19cce8e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01e928dfd9584e6d4",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-06d19d47d6715d99c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e815eb9c19cce8e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ab737af3c551e516",
            "owner_id": "375879531645"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:375879531645:loadbalancer/app/ecs-alb/8e61a2dfafb1be3e",
            "arn_suffix": "app/ecs-alb/8e61a2dfafb1be3e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-alb-1648027542.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:375879531645:loadbalancer/app/ecs-alb/8e61a2dfafb1be3e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01fe74dd129caed2a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0caf7dd6df8b9b0e1"
              },
              {
                "subnet_id": "subnet-0ce349580f5fcf9c2"
              },
              {
                "subnet_id": "subnet-0ea83bc377b2d2ad5"
              }
            ],
            "subnets": [
              "subnet-0caf7dd6df8b9b0e1",
              "subnet-0ce349580f5fcf9c2",
              "subnet-0ea83bc377b2d2ad5"
            ],
            "tags": {
              "Enviroment": "Dev",
              "Name": "ALB_Target_Groups"
            },
            "tags_all": {
              "Enviroment": "Dev",
              "Name": "ALB_Target_Groups"
            },
            "vpc_id": "vpc-03e815eb9c19cce8e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.alb.data.aws_subnets.this",
            "module.sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:375879531645:listener/app/ecs-alb/8e61a2dfafb1be3e/b0cef277264b75c3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:375879531645:targetgroup/ecs-alb-tg/d6a0af8cb39c2030",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:375879531645:listener/app/ecs-alb/8e61a2dfafb1be3e/b0cef277264b75c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:375879531645:loadbalancer/app/ecs-alb/8e61a2dfafb1be3e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.data.aws_subnets.this",
            "module.alb.data.aws_vpc.default_vpc",
            "module.sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:375879531645:targetgroup/ecs-alb-tg/d6a0af8cb39c2030",
            "arn_suffix": "targetgroup/ecs-alb-tg/d6a0af8cb39c2030",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:375879531645:targetgroup/ecs-alb-tg/d6a0af8cb39c2030",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Enviroment": "Dev",
              "Name": "ALB_Target_Groups"
            },
            "tags_all": {
              "Enviroment": "Dev",
              "Name": "ALB_Target_Groups"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03e815eb9c19cce8e"
          },
          "dependencies": [
            "module.alb.data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375879531645:vpc/vpc-03e815eb9c19cce8e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01e928dfd9584e6d4",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-06d19d47d6715d99c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e815eb9c19cce8e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ab737af3c551e516",
            "owner_id": "375879531645"
          }
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:375879531645:security-group/sg-01fe74dd129caed2a",
            "description": "ECS Security Group",
            "egress": [],
            "id": "sg-01fe74dd129caed2a",
            "ingress": [],
            "name": "ecs-security-group",
            "name_prefix": "",
            "owner_id": "375879531645",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e815eb9c19cce8e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3629447512",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01fe74dd129caed2a",
            "security_group_rule_id": "sgr-02d99672452ad0378",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this"
          ]
        },
        {
          "index_key": "http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2726079803",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01fe74dd129caed2a",
            "security_group_rule_id": "sgr-063acc9f296f04f63",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}